--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
 
             <p class="form__description"><img class="form__icon" src="https://i.ibb.co/VjbfBQV/images.png" alt="coin icon" height="20">We use midmarket rates</p>
+            <p class="form__description"><img class="form__icon" src="https://i.ibb.co/VjbfBQV/images.png" alt="coin icon" height="20">Testowy description</p>
 
             <button class="form__button" type="submit">Convert</button>
 
