--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="author" content="Andrzej Knop">
     <meta name="description" content="Internetowy kalkulator walut - praca domowa">
     <meta name="keywords" content="internetowy, kalkulator, walut, andrzej, knop, praca, domowa, youcode, kurs">
+    <meta property="og:image" content="img/share.png">
+    <link rel="icon" href="img/icon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" />
     <link href="css/style.css" rel="stylesheet">
     <link href="css/header.css" rel="stylesheet">
@@ -29,18 +31,17 @@
     <main class="main">
         <form class="form js-form">
             <label class="form__label" for="amount">Amount (PLN)</label><br>
-            <input class="form__input js-amount" id="amount" type="number" name="amount" min="0" step="0.01" required>
+            <input class="form__input js-amount" id="amount" type="number" name="amount" min="0" max="999999" step="0.01" required>
 
             <label class="form__label" for="currency_input">Change to:</label><br>
             <select class="form__input js-currency" id="currency_input" name="currency_input">
-                <option value="4.56">EUR - Euro</option>
-                <option value="3.77">USD - US Dollar</option>
-                <option value="5.24">GBP - British Pound</option>
+                <option value="EUR">EUR - Euro</option>
+                <option value="USD">USD - US Dollar</option>
+                <option value="GBP">GBP - British Pound</option>
             </select>
 
 
             <p class="form__description"><img class="form__icon" src="https://i.ibb.co/VjbfBQV/images.png" alt="coin icon" height="20">We use midmarket rates</p>
-            <p class="form__description"><img class="form__icon" src="https://i.ibb.co/VjbfBQV/images.png" alt="coin icon" height="20">Testowy description</p>
 
             <button class="form__button" type="submit">Convert</button>
 
