fixed images paths

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body class="body">
     <header class="header">
-        <img src="https://i.ibb.co/nwJGXMZ/country-currencies.png" alt="logo" height="100">
+        <img src="img/country-currencies.png" alt="logo" height="100">
         <h1 class="header__title">Currency calculator</h1>
         <p class="header__description">live mid-market rates</p>
     </header>
@@ -41,7 +41,7 @@
             </select>
 
 
-            <p class="form__description"><img class="form__icon" src="https://i.ibb.co/VjbfBQV/images.png" alt="coin icon" height="20">We use midmarket rates</p>
+            <p class="form__description"><img class="form__icon" src="img/coin.png" alt="coin icon" height="20">We use midmarket rates</p>
 
             <button class="form__button" type="submit">Convert</button>
 
