--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Andrzej Knop">
-    <meta name="description" content="Internetowy kalkulator walut - praca domowa">
-    <meta name="keywords" content="internetowy, kalkulator, walut, andrzej, knop, praca, domowa, youcode, kurs">
+    <meta name="description" content="Currency calculator app - live mid-market rates">
+    <meta name="keywords" content="currency, calculator, app, andrzej, knop, homework">
     <meta property="og:image" content="img/share.png">
     <link rel="icon" href="img/icon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" />
@@ -19,7 +19,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">
     <script defer src="js/script.js"></script>
-    <title>Currency calculator - Andrzej Knop</title>
+    <title>Currency calculator</title>
 </head>
 
 <body class="body">
